Fixed bug #44141 (private parent constructor callable through static function)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@253416 c90b9560-bf6c-de11-be94-00142212c4b1